@@ -6,6 +6,7 @@ Release 0.7.1: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+  TEZ-2391. TestVertexImpl timing out at times on jenkins builds.
   TEZ-2509. YarnTaskSchedulerService should not try to allocate containers if AM is shutting down.
   TEZ-2527. Tez UI: Application hangs on entering erroneous RegEx in counter table search box
   TEZ-2523. Tez UI: derive applicationId from dag/vertex id instead of relying on json data
